--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -14,11 +14,13 @@
 <section class="recent-posts">
     <div class="container">
         <h2>Latest Posts</h2>
-        {{ $pages := where site.RegularPages "Type" "in" site.Params.mainSections }}
-        {{ $paginator := .Paginate (where $pages "Params.hidden" "ne" true) }}
-        {{ range $paginator.Pages }}
-            {{ partial "post-entry.html" . }}
-        {{ end }}
+        <div class="post-list">
+            {{ $pages := where site.RegularPages "Type" "in" site.Params.mainSections }}
+            {{ $paginator := .Paginate (where $pages "Params.hidden" "ne" true) }}
+            {{ range $paginator.Pages }}
+                {{ partial "post-entry.html" . }}
+            {{ end }}
+        </div>
         {{ if gt $paginator.TotalPages 1 }}
             {{ partial "pagination.html" . }}
         {{ end }}
@@ -28,10 +30,12 @@
 <section class="recent-posts">
     <div class="container">
         <h2>Latest Posts</h2>
-        {{ $pages := where site.RegularPages "Type" "in" site.Params.mainSections }}
-        {{ range first 5 $pages }}
-            {{ partial "post-entry.html" . }}
-        {{ end }}
+        <div class="post-list">
+            {{ $pages := where site.RegularPages "Type" "in" site.Params.mainSections }}
+            {{ range first 5 $pages }}
+                {{ partial "post-entry.html" . }}
+            {{ end }}
+        </div>
         {{ if gt (len $pages) 5 }}
             <div class="more-posts">
                 <a href="/posts/">View All Posts →</a>
